scrollbars fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ main {
   overflow-y: scroll;
 }
 
+main::-webkit-scrollbar, menu::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+}
+
 main,
 menu {
   padding: 20px 30px 60px 30px;
@@ -118,8 +122,7 @@ menu {
 }
 
 #forecastSection::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
+  height: 8px;
 }
 
 #forecastSection::-webkit-scrollbar-track {
@@ -292,6 +295,5 @@ nav {
     max-width: 250px;
   }
 }
-
 
 @media screen and (min-width: 560px) {}
